--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~42.0.1",
     "expo-clipboard": "~1.1.0",
     "expo-status-bar": "~1.0.4",
+    "formik": "^2.2.9",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
@@ -21,7 +22,9 @@
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-web": "^0.17.1"
+    "react-native-web": "^0.17.1",
+    "yup": "^0.32.9",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
